--- a/CLAHE.ipynb
+++ b/CLAHE.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_PATH = \"/home/meimarcel/Documentos/Facul/LAMBDA/Leishmaniose\"\n",
+    "BASE_PATH = \"<SEU_PATH>\"\n",
     "applyCLAHE(BASE_PATH+\"/Leishmania_Training_Dataset_CLAHE/treinamento\")\n",
     "applyCLAHE(BASE_PATH+\"/Leishmania_Training_Dataset_CLAHE/validacao\")\n",
     "applyCLAHE(BASE_PATH+\"/Leishmania_Test_Dataset_CLAHE\")"
